--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Ølhund</string>
+    <string name="app_name">beerdog</string>
     <string name="beer">Øl</string>
 
 
-    <string name="new_beer_title">Legg inn ny øl</string>
+    <string name="new_beer_title">Legg til</string>
     <string name="new_beer_name_hint">Navn</string>
     <string name="new_beer_snapshot_hint">Ta bilde</string>
     <string name="new_beer_brewery_hint">Bryggeri</string>
